@@ -320,4 +320,7 @@ control
     Built ipk
     Added the 2.02-rc1 tag to git
 
-==========
+========== 2.02-rc2 STARTS [16 Feb 2021]
+
+plugin.py
+    Fix a typo in a variable name.
